Created facility to queue Firebase actions until the data service has connected.