@@ -6,7 +6,6 @@ import android.content.Intent;
 import com.google.firebase.messaging.RemoteMessage;
 import com.playposse.peertopeeroxygen.android.R;
 import com.playposse.peertopeeroxygen.android.data.DataRepository;
-import com.playposse.peertopeeroxygen.android.data.DataServiceConnection;
 import com.playposse.peertopeeroxygen.android.data.types.PointType;
 import com.playposse.peertopeeroxygen.android.firebase.FirebaseMessage;
 import com.playposse.peertopeeroxygen.android.model.ExtraConstants;
@@ -23,15 +22,12 @@ import java.util.Map;
  */
 public class MissionCompletionAction extends FirebaseAction {
 
-    public MissionCompletionAction(
-            Context applicationContext,
-            DataServiceConnection dataServiceConnection) {
-
-        super(applicationContext, dataServiceConnection);
+    public MissionCompletionAction(RemoteMessage remoteMessage) {
+        super(remoteMessage);
     }
 
-
-    public void handleMissionCompletion(RemoteMessage remoteMessage) {
+    @Override
+    public void execute(RemoteMessage remoteMessage) {
         // Look up data.
         MissionCompletionMessage completionMessage =
                 new MissionCompletionMessage(remoteMessage);
@@ -87,7 +83,7 @@ public class MissionCompletionAction extends FirebaseAction {
         }
 
         public Long getMissionId() {
-            return new Long(data.get(MISSION_KEY));
+            return Long.valueOf(data.get(MISSION_KEY));
         }
 
         public UserBeanParcelable getBuddyBean() {
